$Id$
$Name$

IN CVS but not released

Bug Fixes:
 - Tweaks to shell detection to detect remote vanilla csh
 - zsh has a pipestatus array variable similar to bash, use it
 

----------------------------------------------------------------------
Version 1.0pre3 (20030119)

Bug Fixes:
  - Fix PIPESTATUS trick to not require extra 'seq' utility, just a while loop
  - Using "-toc" gave uninitialized var warning, obvious problem, fixed.
      Eradicated some other spots of code that used $_ too.
  - "-rmindex" yells if you don't give an argument

Cleanup:
  - Cosmetic - fix missing line in output if no remote and buffer=false
  - Remove duplicated index delete code

----------------------------------------------------------------------
Version 1.0pre2 (20030118)

Bug fixes:
  - atime preserve option to tar/star/afio modifies the ctime of the
      files. Using ctime checks then says everything is newer, no matter
      what the level. Make atime preserve a global option defaulting to
      false; if true turn off ctime checks
  - When reading from given filename, set device to dir so that we don't
      pad blocks by accident if default device is tape
  - Detect shell type for local and any remote hosts
      Only use bash PIPESTATUS trick if we find bash 2.x


----------------------------------------------------------------------
Version 1.0pre1 (20030118)

Changes:
  - Allow non-root execution along with "sudo". Set
      path{'command'} = "sudo command" or "sudo -u username command" in
      the config file.  Idea from Alex Aiminoff's patch to 0.9.8
  - Added $remoteuser to config for rsh/ssh
  - Check that 'buffer' can run with set $megs.
      From John Reynolds, brought forward from 0.9.8.  Remote as well.
  - Check for existence of remote executables before doing remote backups
      Based on John Reynolds' modifications
  - A "no blocking at all" option. Set $blksize=0 in the config file.
  - Added support for "zip" as valid archive compression type