@@ -5,6 +5,8 @@ Flexbackup to-do list
 Some of these might not happen
 
 Cleanup/fix:
+ - Detect pipeline errors for remote shell = sh; use exit-code collecting
+     trick to the local sh one I added
  - Clean up more $main:: vars, split into types or refactor code
  - Whole class of problems like:
     - Use dump combined flags (for older dumps that want abc not -a -b -c)
@@ -14,15 +16,13 @@ Cleanup/fix:
  - When level > 9 and using files, -toc sorts it wrong (cosmetic nit)
  - When level > 9 and rm old logs/stamps, order is printed wrong (cosmetic nit)
  - Clean up usages of $_ so I don't mess something up by inserting lines
-     later  [ patch ready ]
+     later
  - If comp_log is changed, we don't nuke old logs that normally would be
    overwritten with ourselves if comp_log stayed the same. (cosmetic nit)
  - Try to refactor backup all/single, each fs, >1 tapes, etc.  Duplicated
      logic in some spots..
  - Split main program; use separate libs for archiver types that are stored
    in different files?  install then requires more than just program + conf file.
- - Figure out a way to detect pipeline command failures for machines where
-     local /bin/sh is bourne/ash/ksh/etc.  All other combos work.
 
 Misc:
  - Make a manual page (AND other enchanced documentation, more than a README)
