@@ -15,13 +15,12 @@
 by hand isn't enough...
 
 <P>
-<B>Version 1.0pre3</B> (going to call this 1.0 soon if no major problems pop
+<B>Version 1.0pre4</B> (going to call this 1.0 soon if no major problems pop
 up - development of queued-up stuff can go on afterwards)
 <UL>
-<LI><A
-HREF="tarball/flexbackup-1.0pre3.tar.gz">flexbackup-1.0pre3.tar.gz</A>  (Jan 19 2003)
-<LI><A HREF="RPMS/flexbackup-1.0pre3-1.src.rpm">flexbackup-1.0pre3-1.src.rpm</A>
-<LI><A HREF="RPMS/flexbackup-1.0pre3-1.noarch.rpm">flexbackup-1.0pre3-1.noarch.rpm</A>
+<LI><A HREF="tarball/flexbackup-1.0pre4.tar.gz">flexbackup-1.0pre4.tar.gz</A>  (Jan 21 2003)
+<LI><A HREF="RPMS/flexbackup-1.0pre4-1.src.rpm">flexbackup-1.0pre4-1.src.rpm</A>
+<LI><A HREF="RPMS/flexbackup-1.0pre4-1.noarch.rpm">flexbackup-1.0pre4-1.noarch.rpm</A>
 </UL>
 
 <B>Links & Info:</B>
